--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -108,5 +108,6 @@ kuid on võimatu garanteerida, et see töötab igal seadmel ja iga rakendusega.
     <string name="help_used">on kasutanud seda andmeside tüüpi</string>
     <string name="help_frozen">on välja lülitatud</string>
     <string name="help_dangerous">On ohtlik</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
