--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -108,5 +108,6 @@ il est impossible de garantir un fonctionnement parfait sur chaque appareil et p
     <string name="help_used">a utilisé ces données</string>
     <string name="help_frozen">est désactivée</string>
     <string name="help_dangerous">est dangereuse, restreindre peut causer des problèmes</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
