--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -108,5 +108,6 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_used">је користио ове податке</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">је опасан</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
