--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -108,5 +108,6 @@ Det är emellertid omöjligt att garantera att appen fungerar på alla enheter o
     <string name="help_used">har använt denna data</string>
     <string name="help_frozen">is inaktiverad</string>
     <string name="help_dangerous">är farlig</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
