--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -106,5 +106,6 @@
     <string name="help_used">表示app曾取得過資訊</string>
     <string name="help_frozen">表示app已凍結/停用</string>
     <string name="help_dangerous">不建議限制</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
