--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -108,5 +108,6 @@
     <string name="help_used">يستخدم هذه البيانات</string>
     <string name="help_frozen">مُعطل</string>
     <string name="help_dangerous">خطير</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
