--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -108,5 +108,6 @@
     <string name="help_used">इस डेटा का उपयोग किया है</string>
     <string name="help_frozen">अक्षम किया गया है</string>
     <string name="help_dangerous">खतरनाक है</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
