--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -108,5 +108,6 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_used">קיבל גישה להרשאה זו</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">מסוכן</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
