--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -108,5 +108,6 @@
     <string name="help_used">はそのデータを使用しています</string>
     <string name="help_frozen">は無効になっています</string>
     <string name="help_dangerous">は危険です</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
