--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -101,12 +101,13 @@ maar het is onmogelijk om te garanderen dat het op elk apparaat en voor elke app
     <string name="settings_extra">Extra gebruiksgegevens (herstart vereist)</string>
     <string name="settings_log">Debug log (herstart vereist)</string>
     <string name="settings_expert">Expert modus</string>
-    <string name="settings_dangerous">Restrict dangerous functions</string>
+    <string name="settings_dangerous">Beperk gevaarlijke functies</string>
     <string name="help_application">Applicatie</string>
     <string name="help_internet">heeft internet rechten</string>
     <string name="help_granted">heeft Android rechten</string>
     <string name="help_used">heeft deze gegevens gebruikt</string>
     <string name="help_frozen">is uitgezet</string>
     <string name="help_dangerous">is gevaarlijk</string>
+    <string name="help_half">is gedeeltelijk beperkt</string>
 
 </resources>
