--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -109,5 +109,6 @@
     <string name="help_used">wykorzystała dane</string>
     <string name="help_frozen">jest wyłączona</string>
     <string name="help_dangerous">niebezpieczne uprawnienie, ograniczenie może spowodować problemy</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
