--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -108,5 +108,6 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="help_used">Tem usado estes dados</string>
     <string name="help_frozen">Está desativado</string>
     <string name="help_dangerous">É perigoso</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
