--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -108,5 +108,6 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="help_used">a utilizat aceste date</string>
     <string name="help_frozen">is disabled</string>
     <string name="help_dangerous">is dangerous</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
