--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -109,5 +109,6 @@ avšak nie je nemožné zaručiť, že bude fungovať bezchybne na každom zaria
     <string name="help_used">používala tieto dáta</string>
     <string name="help_frozen">je zakázaná</string>
     <string name="help_dangerous">je nebezpečná</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
