--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -110,5 +110,6 @@
     <string name="help_used">je uporabljal te podatke</string>
     <string name="help_frozen">je onemogočen</string>
     <string name="help_dangerous">je nevaren</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
