--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">تحديث</string>
     <string name="msg_licensed" formatted="false">مرخص ل: %s</string>
     <string name="msg_loading">جاري التحميل</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">إضغط ايقونة التطبيق لتعديل كل القيود</string>
     <string name="msg_sure">هل أنت متأكد ؟</string>
     <string name="msg_done">إنتهى</string>
