--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Лицензирано на: %s</string>
     <string name="msg_loading">Зареждане</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Цъкнете иконата на приложението за редактиране на всички забрани</string>
     <string name="msg_sure">Сигурни ли сте?</string>
     <string name="msg_done">Готово</string>
