--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Litsentseeritud: %s</string>
     <string name="msg_loading">Laeb</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Klõpsa rakenduse ikoonile, et muuta</string>
     <string name="msg_sure">Oled sa kindel?</string>
     <string name="msg_done">Valmis</string>
