--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Άδεια για: %s</string>
     <string name="msg_loading">Φόρτωση</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Πιέστε το εικονίδιο της εφαρμογής για επεξεργασία όλων των περιορισμών</string>
     <string name="msg_sure">Είστε σίγουρος;</string>
     <string name="msg_done">Τέλος</string>
