--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Actualizar</string>
     <string name="msg_licensed">Con licencia para: %s</string>
     <string name="msg_loading">Cargando</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Tocar el icono de la aplicación para editar los permisos</string>
     <string name="msg_sure">¿Estas seguro?</string>
     <string name="msg_done">Completado</string>
