--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -36,6 +36,8 @@
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">%s مجوز به: </string>
     <string name="msg_loading">در حال بارگذاری</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">برای ویرایش تمامی محدودیت ها بر روی آیکون نرم افزار مورد نظر کلیک کنید</string>
     <string name="msg_sure">آبااطمینان دارید؟</string>
     <string name="msg_done">انحام شد</string>
