--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Päivitä</string>
     <string name="msg_licensed" formatted="false">Lisensoitu: %s</string>
     <string name="msg_loading">Lataa</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Klikkaa applikaation ikonia editoidaksesi kaikki rajoituksia</string>
     <string name="msg_sure">Oletko varma?</string>
     <string name="msg_done">Valmis</string>
