--- a/res/values-he/strings.xml
+++ b/res/values-he/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">יישום מורשה ל: %s</string>
     <string name="msg_loading">טוען</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">לחץ על סמל היישום כדי לערוך את כל ההגבלות</string>
     <string name="msg_sure">אתה בטוח?</string>
     <string name="msg_done">בוצע</string>
