--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">अद्यतन</string>
     <string name="msg_licensed" formatted="false">अधिकारी: %s</string>
     <string name="msg_loading">लोडिंग</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">सभी प्रतिबंध को संपादित करने application के icon को क्लिक करे</string>
     <string name="msg_sure">क्या आप निश्चित हैं?</string>
     <string name="msg_done">हो गया</string>
