--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Posodobitev</string>
     <string name="msg_licensed" formatted="false">Licencirano na: %s</string>
     <string name="msg_loading">Nalagam</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Za spreminjanje pravic klikni na ikono programa</string>
     <string name="msg_sure">Ste prepričani?</string>
     <string name="msg_done">Dokončano</string>
