--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Uppdatera</string>
     <string name="msg_licensed" formatted="false">Licensierat till: %s</string>
     <string name="msg_loading">Laddar</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Klicka på appikonen för att ändra alla restriktioner</string>
     <string name="msg_sure">Är du säker?</string>
     <string name="msg_done">Klar</string>
