--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -34,6 +34,8 @@
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">%s adına lisanslıdır.</string>
     <string name="msg_loading">Yükleniyor</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Tüm izinleri düzenlemek için uygulamanın simgesine dokun</string>
     <string name="msg_sure">Emin misin?</string>
     <string name="msg_done">Bitti</string>
