--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -34,8 +34,8 @@
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Lizenziert für: %s</string>
     <string name="msg_loading">Lade...</string>
-    <string name="msg_saved_to">Saved to %s</string>
-    <string name="msg_no_restrictions">No restrictions found</string>
+    <string name="msg_saved_to">Gespeichert nach %s</string>
+    <string name="msg_no_restrictions">Keine Beschränkung gefunden</string>
     <string name="msg_edit">Berühren Sie das App-Icon, um alle Berechtigungen zu bearbeiten.</string>
     <string name="msg_sure">Sind Sie sicher?</string>
     <string name="msg_done">Fertig</string>
