--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -21,7 +21,7 @@
     <string name="menu_help">說明</string>
     <string name="menu_all">所有程式</string>
     <string name="menu_restriction_all">套用預設規則</string>
-    <string name="menu_usage_all">Toggle filter</string>
+    <string name="menu_usage_all">切換顯示限制項目</string>
     <string name="menu_apply">套用預設規則</string>
     <string name="menu_clear">清空</string>
     <string name="menu_app_launch">執行</string>
@@ -35,7 +35,7 @@
     <string name="msg_licensed" formatted="false">授權給: %s</string>
     <string name="msg_loading">載入中...</string>
     <string name="msg_saved_to">Saved to %s</string>
-    <string name="msg_no_restrictions">No restrictions found</string>
+    <string name="msg_no_restrictions">找不到限制規則</string>
     <string name="msg_edit">點選app圖示以檢視並修改限制規則</string>
     <string name="msg_sure">確定進行操作?</string>
     <string name="msg_done">完成</string>
@@ -80,7 +80,7 @@
     <string name="title_frestricted">已被限制程式</string>
     <string name="title_fuser">顯示使用者app</string>
     <string name="title_fsystem">顯示系統app</string>
-    <string name="title_fnot">Negate</string>
+    <string name="title_fnot">←反選(無限制程式)</string>
     <string name="settings_serial">序號</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">經度</string>
@@ -101,13 +101,13 @@
     <string name="settings_extra">詳細操作紀錄 (需重新啟動)</string>
     <string name="settings_log">偵錯日誌 (需重新啟動)</string>
     <string name="settings_expert">進階模式</string>
-    <string name="settings_dangerous">Restrict dangerous functions</string>
+    <string name="settings_dangerous">關閉高風險功能</string>
     <string name="help_application">程式</string>
     <string name="help_internet">表示有網際網路權限</string>
     <string name="help_granted">表示有手機權限</string>
     <string name="help_used">表示app曾取得過資訊</string>
     <string name="help_frozen">表示app已凍結/停用</string>
     <string name="help_dangerous">不建議限制</string>
-    <string name="help_half">partly restricted</string>
+    <string name="help_half">只有限制部分權限</string>
 
 </resources>
