Translated new strings.

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -103,14 +103,14 @@
     <string name="settings_extra">额外用量统计数据（需要重启）</string>
     <string name="settings_log">调试日志（需要重启）</string>
     <string name="settings_expert">专家模式</string>
-    <string name="settings_dangerous">Restrict dangerous functions</string>
+    <string name="settings_dangerous">限制可能导致应用异常的权限</string>
     <string name="help_application">应用详情</string>
     <string name="help_internet">应用含有联网权限</string>
     <string name="help_granted">应用已申请的权限（ Androidmanifest 中表明）</string>
     <string name="help_used">应用已使用的权限</string>
     <string name="help_frozen">应用已被冻结/停用</string>
     <string name="help_dangerous">可能导致应用异常的权限</string>
-    <string name="help_half">partly restricted</string>
+    <string name="help_half">已限制部分子权限</string>
 
 </resources>
 
