--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_notenabled">Ní XPrivacy chumasú i an suiteálaí Xposed</string>
     <string name="app_wrongandroid">Ach amháin le haghaidh Android version 4.0+</string>
     <string name="app_version" formatted="false">XPrivacy leagan: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
+    <string name="app_xversion" formatted="false">Xposed framework leagan: %d</string>
     <string name="app_copyright">Cóipcheart \ u00A9 2013 le M. Bokhorst (M66B)</string>
     <string name="menu_usage">Úsáid</string>
     <string name="menu_refresh">Athnuaigh</string>
@@ -82,7 +82,7 @@
     <string name="settings_mac">MAC seoladh</string>
     <string name="settings_ip">seoladh IP</string>
     <string name="settings_phone">uimhir Fón</string>
-    <string name="settings_id">Android ID</string>
+    <string name="settings_id">ID Android</string>
     <string name="settings_country">Tír</string>
     <string name="settings_operator">Oibreoir</string>
     <string name="settings_subscriber">ID Suibscríobhaí</string>
