--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -20,23 +20,28 @@
     <string name="menu_about">Maidir</string>
     <string name="menu_help">Cabhair</string>
     <string name="menu_all">Gach</string>
+    <string name="menu_restriction_all">Toggle restrictions</string>
+    <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Cuir teimpléad</string>
     <string name="menu_clear">Geal</string>
     <string name="menu_app_launch">Seoladh</string>
     <string name="menu_app_settings">sonraí App</string>
     <string name="menu_app_store">Store Súgartha</string>
     <string name="menu_accounts">Roghnaigh cuntais a cheadú</string>
+    <string name="menu_applications">Select applications to allow</string>
     <string name="menu_contacts">Roghnaigh cuntais a cheadú</string>
     <string name="msg_new">Nua</string>
     <string name="msg_update">Nuashonrú</string>
-    <string name="msg_restricted" formatted="false">%s srianta XPrivacy</string>
     <string name="msg_licensed" formatted="false">Ceadúnaithe do: %s</string>
     <string name="msg_loading">Loading</string>
+    <string name="msg_saved_to">Saved to %s</string>
+    <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Cliceáil ar an deilbhín iarratas a chur in eagar na srianta uile</string>
     <string name="msg_sure">An bhfuil tú cinnte?</string>
     <string name="msg_done">Arna dhéanamh</string>
     <string name="msg_reboot">Atosú teastáil</string>
-    <string name="msg_random">Randamaigh</string>
+    <string name="msg_random_now">Randomize now</string>
+    <string name="msg_random_access">Randomize on access</string>
     <string name="msg_random_boot">Randamaigh tar éis tosaithe</string>
     <string name="msg_first"><b>cúram mór aire do a fhorbairt agus a thástáil XPrivacy,
 áfach, go bhfuil sé dodhéanta a ráthú go mbeidh sé obair flawless ar gach gléas agus do gach agus gach iarratas.
@@ -57,15 +62,16 @@
     <string name="restrict_network">Líonra (seoltaí)</string>
     <string name="restrict_notifications">Fógraí</string>
     <string name="restrict_phone">Fón (ID, uimhreacha, glaonna)</string>
+    <string name="restrict_sensors">Sensors</string>
     <string name="restrict_storage">Stóráil (meáin, SD-cárta)</string>
     <string name="restrict_shell">Shell (orduithe, fhorúsáideoir)</string>
     <string name="restrict_system">Córas (suiteáilte apps)</string>
     <string name="restrict_view">Amharc (bhrabhsálaí)</string>
-    <string name="title_category">Catagóir:</string>
+    <string name="title_categories">Categories</string>
     <string name="title_restrict">Seiceáil chun srian a chur ar:</string>
-    <string name="title_nofilter">Uimh gníomhach scagaire</string>
+    <string name="title_filters">Filters</string>
 
-    <plurals name="title_filters">
+    <plurals name="title_active_filters">
         <item quantity="one">1 gníomhach scagaire</item>
         <item quantity="other">%d scagairí atá gníomhach</item>
     </plurals>
@@ -76,6 +82,7 @@
     <string name="title_frestricted">Scagaire ar shrianta</string>
     <string name="title_fuser">ar iarratais úsáideora</string>
     <string name="title_fsystem">Scagaire maidir le hiarratais ar chóras</string>
+    <string name="title_fnot">Negate</string>
     <string name="settings_serial">Sraithuimhir#</string>
     <string name="settings_lat">TX</string>
     <string name="settings_lon">Domhanfhad</string>
@@ -83,16 +90,26 @@
     <string name="settings_ip">seoladh IP</string>
     <string name="settings_phone">uimhir Fón</string>
     <string name="settings_id">ID Android</string>
+    <string name="settings_adid">Advertisement ID</string>
     <string name="settings_country">Tír</string>
     <string name="settings_operator">Oibreoir</string>
     <string name="settings_subscriber">ID Suibscríobhaí</string>
     <string name="settings_ua">gníomhaire Úsáideoir</string>
+    <string name="settings_general">General</string>
+    <string name="settings_fake_data">Fake data</string>
+    <string name="settings_global">Use global fake data</string>
+    <string name="settings_notify">Update notifications</string>
+    <string name="settings_usage">Android usage data (requires restart)</string>
+    <string name="settings_extra">Extra usage data (requires restart)</string>
     <string name="settings_log">logáil Debug (Éilíonn atosú)</string>
+    <string name="settings_expert">Expert mode</string>
+    <string name="settings_dangerous">Restrict dangerous functions</string>
     <string name="help_application">Iarratais</string>
     <string name="help_internet">Tá cead idirlín</string>
     <string name="help_granted">Tá cead Android</string>
     <string name="help_used">Tá úsáid na sonraí seo</string>
     <string name="help_frozen">faoi mhíchumas</string>
     <string name="help_dangerous">contúirteacha</string>
+    <string name="help_half">partly restricted</string>
 
 </resources>
