--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -34,6 +34,7 @@
     <string name="msg_update">Nuashonrú</string>
     <string name="msg_licensed" formatted="false">Ceadúnaithe do: %s</string>
     <string name="msg_loading">Loading</string>
+    <string name="msg_filtering">Applying filters</string>
     <string name="msg_saved_to">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Cliceáil ar an deilbhín iarratas a chur in eagar na srianta uile</string>
