--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -34,6 +34,7 @@
     <string name="msg_update">Update</string>
     <string name="msg_licensed" formatted="false">Licensz tulajdonos: %s</string>
     <string name="msg_loading">Töltés</string>
+    <string name="msg_filtering">Applying filters</string>
     <string name="msg_saved_to">Saved to %s</string>
     <string name="msg_no_restrictions">No restrictions found</string>
     <string name="msg_edit">Kattintson az alkalmazás ikonra az összes korlátozás módosításához</string>
