--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -34,6 +34,7 @@
     <string name="msg_update">Bijgewerkt</string>
     <string name="msg_licensed" formatted="false">In licentie gegeven aan: %s</string>
     <string name="msg_loading">Laden</string>
+    <string name="msg_filtering">Applying filters</string>
     <string name="msg_saved_to">Saved to %s</string>
     <string name="msg_no_restrictions">Geen beperkingen gevonden</string>
     <string name="msg_edit">Klik op het applicatiepictogram om alle beperkingen te wijzigen</string>
