--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -34,6 +34,7 @@
     <string name="msg_update">Обновить</string>
     <string name="msg_licensed" formatted="false">Владелец лицензии: %s</string>
     <string name="msg_loading">Загрузка</string>
+    <string name="msg_filtering">Applying filters</string>
     <string name="msg_saved_to">Сохранено в %s</string>
     <string name="msg_no_restrictions">Не найдено разрешений</string>
     <string name="msg_edit">Нажмите на иконку приложения для редактирования всех разрешений</string>
