--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -21,6 +21,8 @@
     <string name="menu_help">Apua</string>
     <string name="menu_all">Kaikki</string>
     <string name="menu_restriction_all">Vaihda rajoitukset</string>
+    <string name="menu_clear_all">Clear all</string>
+    <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_usage_all">Vaihda suodatin</string>
     <string name="menu_apply">Aseta pohja</string>
     <string name="menu_clear">Tyhjennä</string>
