--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -21,6 +21,8 @@
     <string name="menu_help">Ayuda</string>
     <string name="menu_all">Todas</string>
     <string name="menu_restriction_all">Restringir todo</string>
+    <string name="menu_clear_all">Clear all</string>
+    <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_usage_all">Cambiar filtro</string>
     <string name="menu_apply">Aplicar plantilla</string>
     <string name="menu_clear">Borrar</string>
