--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -23,6 +23,8 @@
     <string name="menu_help">راهنما</string>
     <string name="menu_all">همه</string>
     <string name="menu_restriction_all">Toggle restrictions</string>
+    <string name="menu_clear_all">Clear all</string>
+    <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Apply template</string>
     <string name="menu_clear">پاک کردن</string>
