--- a/res/values-ga/strings.xml
+++ b/res/values-ga/strings.xml
@@ -21,6 +21,8 @@
     <string name="menu_help">Cabhair</string>
     <string name="menu_all">Gach</string>
     <string name="menu_restriction_all">Toggle restrictions</string>
+    <string name="menu_clear_all">Clear all</string>
+    <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Cuir teimpléad</string>
     <string name="menu_clear">Geal</string>
