--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -21,6 +21,8 @@
     <string name="menu_help">मदद</string>
     <string name="menu_all">प्रत्येक</string>
     <string name="menu_restriction_all">Toggle restrictions</string>
+    <string name="menu_clear_all">Clear all</string>
+    <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">टेम्पलेट लागू करें</string>
     <string name="menu_clear">साफ़ करे</string>
