--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -21,6 +21,8 @@
     <string name="menu_help">Hjelp</string>
     <string name="menu_all">Alle</string>
     <string name="menu_restriction_all">Skift restriksjoner</string>
+    <string name="menu_clear_all">Clear all</string>
+    <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_usage_all">Skift filter</string>
     <string name="menu_apply">Bruk skjema</string>
     <string name="menu_clear">Slett</string>
