--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -21,6 +21,8 @@
     <string name="menu_help">Pomoč</string>
     <string name="menu_all">Vse</string>
     <string name="menu_restriction_all">Toggle restrictions</string>
+    <string name="menu_clear_all">Clear all</string>
+    <string name="menu_restrict_all">Restrict all</string>
     <string name="menu_usage_all">Toggle filter</string>
     <string name="menu_apply">Uporabi predlogo</string>
     <string name="menu_clear">Počisti</string>
